--- a/src/app/components/canvas/canvas.component.html
+++ b/src/app/components/canvas/canvas.component.html
@@ -1,4 +1,5 @@
 <div class="min-h-screen bg-white flex flex-col justify-between">
+  <!---------------------------------------------- Navbar ---------------------------------------------->
   <div class="relative bg-pencil-500">
     <div class="max-w-7xl mx-auto px-4 sm:px-6">
       <div
@@ -27,7 +28,6 @@
             class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-400 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
           >
             <span class="sr-only">Open menu</span>
-            <!-- Heroicon name: menu -->
             <svg
               class="h-6 w-6"
               xmlns="http://www.w3.org/2000/svg"
@@ -81,16 +81,6 @@
       </div>
     </div>
 
-    <!--
-      Mobile menu, show/hide based on mobile menu state.
-  
-      Entering: "duration-200 ease-out"
-        From: "opacity-0 scale-95"
-        To: "opacity-100 scale-100"
-      Leaving: "duration-100 ease-in"
-        From: "opacity-100 scale-100"
-        To: "opacity-0 scale-95"
-    -->
     <div
       class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden"
     >
@@ -112,7 +102,6 @@
                 class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-400 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
               >
                 <span class="sr-only">Close menu</span>
-                <!-- Heroicon name: x -->
                 <svg
                   class="h-6 w-6"
                   xmlns="http://www.w3.org/2000/svg"
@@ -151,7 +140,7 @@
               Sign up
             </a>
             <p class="mt-6 text-center text-base font-medium text-gray-500">
-              Existing customer?
+              Have an account?
               <a
                 href="#"
                 routerLink="/login"
@@ -165,7 +154,9 @@
       </div>
     </div>
 
-    <div class="bg-green-400">
+    <!---------------------------------------------- Banner ---------------------------------------------->
+    <div *ngIf="!banner" class="h-12 bg-white"></div>
+    <div ng-show="banner === true" *ngIf="banner" class="bg-green-400">
       <div class="max-w-7xl mx-auto py-3 px-3 sm:px-6 lg:px-8">
         <div class="flex items-center justify-between flex-wrap">
           <div class="w-0 flex-1 flex items-center">
@@ -187,6 +178,7 @@
           </div>
           <div class="order-2 flex-shrink-0 sm:order-3 sm:ml-3">
             <button
+              (click)="hideBanner()"
               type="button"
               class="-mr-1 text-white flex transition duration-300 hover:text-gray-400 focus:outline-none sm:-mr-2"
             >
@@ -212,10 +204,131 @@
     </div>
   </div>
 
-  <div class="m-auto h-92">
-    <canvas class="border-2 border-gray-500 h-full w-full" id="canvas"></canvas>
+  <!---------------------------------------------- Canvas ---------------------------------------------->
+  <div class="m-auto flex flex-col gap-x-8 px-12 pt-8 pb-28">
+    <h1 class="flex items-center text-5xl font-bold text-gray-900 mb-4">
+      Canvas
+      <svg
+        *ngIf="loading"
+        class="h-12 w-12 ml-3 animate-spin"
+        fill="currentColor"
+        viewBox="0 0 1792 1792"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M526 1394q0 53-37.5 90.5t-90.5 37.5q-52 0-90-38t-38-90q0-53 37.5-90.5t90.5-37.5 90.5 37.5 37.5 90.5zm498 206q0 53-37.5 90.5t-90.5 37.5-90.5-37.5-37.5-90.5 37.5-90.5 90.5-37.5 90.5 37.5 37.5 90.5zm-704-704q0 53-37.5 90.5t-90.5 37.5-90.5-37.5-37.5-90.5 37.5-90.5 90.5-37.5 90.5 37.5 37.5 90.5zm1202 498q0 52-38 90t-90 38q-53 0-90.5-37.5t-37.5-90.5 37.5-90.5 90.5-37.5 90.5 37.5 37.5 90.5zm-964-996q0 66-47 113t-113 47-113-47-47-113 47-113 113-47 113 47 47 113zm1170 498q0 53-37.5 90.5t-90.5 37.5-90.5-37.5-37.5-90.5 37.5-90.5 90.5-37.5 90.5 37.5 37.5 90.5zm-640-704q0 80-56 136t-136 56-136-56-56-136 56-136 136-56 136 56 56 136zm530 206q0 93-66 158.5t-158 65.5q-93 0-158.5-65.5t-65.5-158.5q0-92 65.5-158t158.5-66q92 0 158 66t66 158z"
+        ></path>
+      </svg>
+      <svg
+        *ngIf="!loading"
+        class="h-12 w-12 ml-2"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 20 20"
+        fill="currentColor"
+      >
+        <path
+          d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z"
+        />
+      </svg>
+    </h1>
+    <div class="relative mb-4 gap-4 flex items-center">
+      <div>
+        <p class="text-xs font-medium text-gray-700 mb-1">Change mode:</p>
+        <div class="flex">
+          <button
+            (click)="setMode(1)"
+            [ngStyle]="{ 'background-color': mode ? 'black' : '#B8B8B8' }"
+            class="h-10 px-3 flex justify-center items-center border border-transparent text-sm font-medium rounded-none rounded-l-md text-white"
+          >
+            <svg
+              class="h-5 w-5"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 20 20"
+              fill="currentColor"
+            >
+              <path
+                d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z"
+              />
+            </svg>
+          </button>
+          <button
+            (click)="setMode(0)"
+            [ngStyle]="{ 'background-color': !mode ? 'black' : '#B8B8B8' }"
+            class="h-10 px-3 flex justify-center items-center border border-transparent text-sm font-medium rounded-none rounded-r-md text-white"
+          >
+            <svg
+              class="h-4 w-4 mx-0.5"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 20 20"
+              fill="currentColor"
+            >
+              <path
+                fillRule="evenodd"
+                d="M6.672 1.911a1 1 0 10-1.932.518l.259.966a1 1 0 001.932-.518l-.26-.966zM2.429 4.74a1 1 0 10-.517 1.932l.966.259a1 1 0 00.517-1.932l-.966-.26zm8.814-.569a1 1 0 00-1.415-1.414l-.707.707a1 1 0 101.415 1.415l.707-.708zm-7.071 7.072l.707-.707A1 1 0 003.465 9.12l-.708.707a1 1 0 001.415 1.415zm3.2-5.171a1 1 0 00-1.3 1.3l4 10a1 1 0 001.823.075l1.38-2.759 3.018 3.02a1 1 0 001.414-1.415l-3.019-3.02 2.76-1.379a1 1 0 00-.076-1.822l-10-4z"
+                clipRule="evenodd"
+              />
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="flex justify-center">
+        <div>
+          <p class="text-xs font-medium text-gray-700 mb-1">
+            Change stroke color:
+          </p>
+          <input
+            class="w-32 h-10 px-4 pb-0.5 text-sm font-medium text-white rounded-md"
+            [value]="color"
+            readonly
+            [(colorPicker)]="color"
+            [style.background]="color"
+            (colorPickerChange)="changeColor($event)"
+          />
+        </div>
+      </div>
+      <div>
+        <p class="text-xs font-medium text-gray-700 mb-1">Upload an image:</p>
+        <button
+          class="w-full h-10 flex justify-center items-center px-4 border border-transparent text-sm font-medium rounded-md text-white bg-green-500 transition duration-300 hover:bg-pencil-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pencil-600"
+        >
+          <svg
+            class="h-5 w-5 mr-2"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+          >
+            <path
+              fillRule="evenodd"
+              d="M4 3a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V5a2 2 0 00-2-2H4zm12 12H4l4-8 3 6 2-4 3 6z"
+              clipRule="evenodd"
+            />
+          </svg>
+          Upload Image
+        </button>
+      </div>
+      <div class="absolute right-0">
+        <p class="text-xs font-medium text-gray-700 mb-1">Share canvas:</p>
+        <div class="mt-1 flex rounded-md shadow-sm">
+          <input
+            type="email"
+            name="email-address"
+            id="email-address"
+            class="px-3 w-80 border border-gray-300 bg-gray-50 rounded-none rounded-l-md sm:text-sm outline-none"
+            placeholder="Email address"
+            #emailAddress
+          />
+          <button
+            class="w-20 h-10 flex justify-center items-center px-4 border border-transparent text-sm font-medium rounded-none rounded-r-md text-white bg-indigo-500 transition duration-300 hover:bg-indigo-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-600"
+          >
+            Share
+          </button>
+        </div>
+      </div>
+    </div>
+    <canvas id="canvas"></canvas>
   </div>
 
+  <!---------------------------------------------- Footer ---------------------------------------------->
   <footer
     class="relative flex flex-col items-center justify-between gap-2 p-6 text-white bg-pencil-500"
   >
