--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div
-  class="min-h-screen flex items-center justify-center bg-gray-50 pb-40 py-12 px-4 sm:px-6 lg:px-8"
+  class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8"
 >
   <div class="max-w-md w-full space-y-8">
     <div>
@@ -82,6 +82,22 @@
           class="group relative w-full flex justify-center mt-10 py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-pencil-500 transition duration-300 hover:bg-pencil-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pencil-600"
         >
           Sign up
+        </button>
+      </div>
+      <div class="flex justify-center">
+        <span class="text-gray-600">or</span>
+      </div>
+      <div>
+        <button
+          (click)="authService.googleLogin()"
+          type="submit"
+          class="group relative w-full flex justify-center py-2 px-4 border border-gray-600 text-sm font-medium rounded-md bg-white transition duration-300 hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500"
+        >
+          <img
+            class="h-5 w-5 mr-2"
+            src="https://assets.stickpng.com/images/5847f9cbcef1014c0b5e48c8.png"
+          />
+          Sign up with Google
         </button>
       </div>
     </div>
