--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div
-  class="min-h-screen flex items-center justify-center bg-gray-50 pb-40 py-12 px-4 sm:px-6 lg:px-8"
+  class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8"
 >
   <div class="max-w-md w-full space-y-8">
     <div>
@@ -72,7 +72,7 @@
         >
           <img
             class="h-5 w-5 mr-2"
-            src="https://assets.stickpng.com/images/5847f9cbcef1014c0b5e48c8.png"
+            src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-suite-everything-you-need-know-about-google-newest-0.png"
           />
           Login with Google
         </button>
