--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -95,7 +95,7 @@
         >
           <img
             class="h-5 w-5 mr-2"
-            src="https://assets.stickpng.com/images/5847f9cbcef1014c0b5e48c8.png"
+            src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-suite-everything-you-need-know-about-google-newest-0.png"
           />
           Sign up with Google
         </button>
