--- a/src/app/components/canvas/canvas.component.html
+++ b/src/app/components/canvas/canvas.component.html
@@ -25,7 +25,7 @@
         <div class="-mr-2 -my-2 md:hidden">
           <button
             type="button"
-            class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-400 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
+            class="rounded-md p-2 inline-flex items-center justify-center text-white hover:text-gray-300 focus:outline-none"
           >
             <span class="sr-only">Open menu</span>
             <svg
@@ -81,7 +81,7 @@
       </div>
     </div>
 
-    <div
+    <!-- <div
       class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden"
     >
       <div
@@ -152,7 +152,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!---------------------------------------------- Banner ---------------------------------------------->
     <div *ngIf="!banner" class="h-12 bg-white"></div>
@@ -205,7 +205,7 @@
   </div>
 
   <!---------------------------------------------- Canvas ---------------------------------------------->
-  <div class="m-auto flex flex-col gap-x-8 px-12 pt-8 pb-28">
+  <div class="m-auto flex flex-col px-0 pt-4 pb-24 lg:px-12 lg:pt-8 lg:pb-28">
     <h1 class="flex items-center text-5xl font-bold text-gray-900 mb-4">
       Canvas
       <svg
@@ -231,139 +231,143 @@
         />
       </svg>
     </h1>
-    <div class="relative mb-4 gap-4 flex items-center">
-      <div>
-        <p class="text-xs font-medium text-gray-700 mb-1">Change mode:</p>
-        <div class="flex">
-          <button
-            (click)="setMode(1)"
-            [ngClass]="mode ? 'bg-black' : 'bg-gray-400 hover:bg-gray-500'"
-            class="h-10 px-3 flex justify-center items-center border border-transparent focus:outline-none text-sm font-medium rounded-none rounded-l-md text-white transition duration-300"
-          >
-            <svg
-              class="h-5 w-5"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 20 20"
-              fill="currentColor"
+    <div class="flex relative flex-col xl:flex-row">
+      <div
+        class="relative mb-4 gap-4 grid grid-cols-1 grid-flow-row sm:grid-flow-col items-center"
+      >
+        <div>
+          <p class="text-xs font-medium text-gray-700 mb-1">Change mode:</p>
+          <div class="flex">
+            <button
+              (click)="setMode(1)"
+              [ngClass]="mode ? 'bg-black' : 'bg-gray-400 hover:bg-gray-500'"
+              class="h-10 px-3 flex justify-center items-center border border-transparent focus:outline-none text-sm font-medium rounded-none rounded-l-md text-white transition duration-300"
             >
-              <path
-                d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z"
+              <svg
+                class="h-5 w-5"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 20 20"
+                fill="currentColor"
+              >
+                <path
+                  d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z"
+                />
+              </svg>
+            </button>
+            <button
+              (click)="setMode(0)"
+              [ngClass]="!mode ? 'bg-black' : 'bg-gray-400 hover:bg-gray-500'"
+              class="h-10 px-3 flex justify-center items-center border border-transparent focus:outline-none text-sm font-medium rounded-none rounded-r-md text-white transition duration-300"
+            >
+              <svg
+                class="h-4 w-4 mx-0.5"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 20 20"
+                fill="currentColor"
+              >
+                <path
+                  fillRule="evenodd"
+                  d="M6.672 1.911a1 1 0 10-1.932.518l.259.966a1 1 0 001.932-.518l-.26-.966zM2.429 4.74a1 1 0 10-.517 1.932l.966.259a1 1 0 00.517-1.932l-.966-.26zm8.814-.569a1 1 0 00-1.415-1.414l-.707.707a1 1 0 101.415 1.415l.707-.708zm-7.071 7.072l.707-.707A1 1 0 003.465 9.12l-.708.707a1 1 0 001.415 1.415zm3.2-5.171a1 1 0 00-1.3 1.3l4 10a1 1 0 001.823.075l1.38-2.759 3.018 3.02a1 1 0 001.414-1.415l-3.019-3.02 2.76-1.379a1 1 0 00-.076-1.822l-10-4z"
+                  clipRule="evenodd"
+                />
+              </svg>
+            </button>
+          </div>
+        </div>
+        <div class="flex justify-center">
+          <div>
+            <p class="text-xs font-medium text-gray-700 mb-1">
+              Change stroke color:
+            </p>
+            <div class="relative">
+              <div
+                class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none"
+              >
+                <span class="text-white">
+                  <svg
+                    class="h-5 w-5"
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 20 20"
+                    fill="currentColor"
+                  >
+                    <path
+                      fillRule="evenodd"
+                      d="M4 2a2 2 0 00-2 2v11a3 3 0 106 0V4a2 2 0 00-2-2H4zm1 14a1 1 0 100-2 1 1 0 000 2zm5-1.757l4.9-4.9a2 2 0 000-2.828L13.485 5.1a2 2 0 00-2.828 0L10 5.757v8.486zM16 18H9.071l6-6H16a2 2 0 012 2v2a2 2 0 01-2 2z"
+                      clipRule="evenodd"
+                    />
+                  </svg>
+                </span>
+              </div>
+              <input
+                class="w-32 h-10 pl-11 pr-4 pb-0.5 text-sm font-medium text-white rounded-md"
+                [value]="color"
+                readonly
+                [(colorPicker)]="color"
+                [style.background]="color"
+                (colorPickerChange)="changeColor($event)"
               />
-            </svg>
-          </button>
+            </div>
+          </div>
+        </div>
+        <div>
+          <p class="text-xs font-medium text-gray-700 mb-1">Upload an image:</p>
           <button
-            (click)="setMode(0)"
-            [ngClass]="!mode ? 'bg-black' : 'bg-gray-400 hover:bg-gray-500'"
-            class="h-10 px-3 flex justify-center items-center border border-transparent focus:outline-none text-sm font-medium rounded-none rounded-r-md text-white transition duration-300"
+            (click)="this.document.getElementById('uploadButton').click()"
+            class="w-full h-10 flex justify-center items-center px-4 border border-transparent text-sm font-medium rounded-md text-white bg-green-500 transition duration-300 hover:bg-pencil-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pencil-600"
           >
+            <input
+              id="uploadButton"
+              class="hidden"
+              type="file"
+              (change)="uploadImage($event)"
+              accept=".png,.jpg"
+            />
             <svg
-              class="h-4 w-4 mx-0.5"
+              class="h-5 w-5 mr-2"
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 20 20"
               fill="currentColor"
             >
               <path
                 fillRule="evenodd"
-                d="M6.672 1.911a1 1 0 10-1.932.518l.259.966a1 1 0 001.932-.518l-.26-.966zM2.429 4.74a1 1 0 10-.517 1.932l.966.259a1 1 0 00.517-1.932l-.966-.26zm8.814-.569a1 1 0 00-1.415-1.414l-.707.707a1 1 0 101.415 1.415l.707-.708zm-7.071 7.072l.707-.707A1 1 0 003.465 9.12l-.708.707a1 1 0 001.415 1.415zm3.2-5.171a1 1 0 00-1.3 1.3l4 10a1 1 0 001.823.075l1.38-2.759 3.018 3.02a1 1 0 001.414-1.415l-3.019-3.02 2.76-1.379a1 1 0 00-.076-1.822l-10-4z"
+                d="M4 3a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V5a2 2 0 00-2-2H4zm12 12H4l4-8 3 6 2-4 3 6z"
                 clipRule="evenodd"
               />
             </svg>
+            Upload image
+          </button>
+        </div>
+        <div>
+          <p class="text-xs font-medium text-gray-700 mb-1">
+            Load a shared canvas:
+          </p>
+
+          <button
+            (click)="showModal()"
+            class="w-full h-10 flex justify-center items-center px-4 border border-transparent text-sm font-medium rounded-md text-white bg-green-500 transition duration-300 hover:bg-pencil-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pencil-600"
+          >
+            <svg
+              class="h-5 w-5 mr-2"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 20 20"
+              fill="currentColor"
+            >
+              <path
+                d="M7 3a1 1 0 000 2h6a1 1 0 100-2H7zM4 7a1 1 0 011-1h10a1 1 0 110 2H5a1 1 0 01-1-1zM2 11a2 2 0 012-2h12a2 2 0 012 2v4a2 2 0 01-2 2H4a2 2 0 01-2-2v-4z"
+              />
+            </svg>
+            Load shared canvas
           </button>
         </div>
       </div>
-      <div class="flex justify-center">
-        <div>
-          <p class="text-xs font-medium text-gray-700 mb-1">
-            Change stroke color:
-          </p>
-          <div class="relative">
-            <div
-              class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none"
-            >
-              <span class="text-white">
-                <svg
-                  class="h-5 w-5"
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 20 20"
-                  fill="currentColor"
-                >
-                  <path
-                    fillRule="evenodd"
-                    d="M4 2a2 2 0 00-2 2v11a3 3 0 106 0V4a2 2 0 00-2-2H4zm1 14a1 1 0 100-2 1 1 0 000 2zm5-1.757l4.9-4.9a2 2 0 000-2.828L13.485 5.1a2 2 0 00-2.828 0L10 5.757v8.486zM16 18H9.071l6-6H16a2 2 0 012 2v2a2 2 0 01-2 2z"
-                    clipRule="evenodd"
-                  />
-                </svg>
-              </span>
-            </div>
-            <input
-              class="w-32 h-10 pl-11 pr-4 pb-0.5 text-sm font-medium text-white rounded-md"
-              [value]="color"
-              readonly
-              [(colorPicker)]="color"
-              [style.background]="color"
-              (colorPickerChange)="changeColor($event)"
-            />
-          </div>
-        </div>
-      </div>
-      <div>
-        <p class="text-xs font-medium text-gray-700 mb-1">Upload an image:</p>
-        <button
-          (click)="this.document.getElementById('uploadButton').click()"
-          class="w-full h-10 flex justify-center items-center px-4 border border-transparent text-sm font-medium rounded-md text-white bg-green-500 transition duration-300 hover:bg-pencil-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pencil-600"
-        >
-          <input
-            id="uploadButton"
-            class="hidden"
-            type="file"
-            (change)="uploadImage($event)"
-            accept=".png,.jpg"
-          />
-          <svg
-            class="h-5 w-5 mr-2"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-          >
-            <path
-              fillRule="evenodd"
-              d="M4 3a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V5a2 2 0 00-2-2H4zm12 12H4l4-8 3 6 2-4 3 6z"
-              clipRule="evenodd"
-            />
-          </svg>
-          Upload Image
-        </button>
-      </div>
-      <div>
-        <p class="text-xs font-medium text-gray-700 mb-1">
-          Load a shared canvas:
-        </p>
-
-        <button
-          (click)="showModal()"
-          class="w-full h-10 flex justify-center items-center px-4 border border-transparent text-sm font-medium rounded-md text-white bg-green-500 transition duration-300 hover:bg-pencil-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pencil-600"
-        >
-          <svg
-            class="h-5 w-5 mr-2"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-          >
-            <path
-              d="M7 3a1 1 0 000 2h6a1 1 0 100-2H7zM4 7a1 1 0 011-1h10a1 1 0 110 2H5a1 1 0 01-1-1zM2 11a2 2 0 012-2h12a2 2 0 012 2v4a2 2 0 01-2 2H4a2 2 0 01-2-2v-4z"
-            />
-          </svg>
-          Load shared canvas
-        </button>
-      </div>
-      <div class="absolute right-0">
+      <div class="mb-4 xl:absolute xl:right-0 xl:mb-0">
         <p class="text-xs font-medium text-gray-700 mb-1">Share canvas:</p>
         <div class="mt-1 flex rounded-md shadow-sm">
           <input
             type="email"
             name="email"
             id="email"
-            class="px-3 w-80 border border-gray-300 bg-gray-50 rounded-none rounded-l-md sm:text-sm outline-none"
+            class="px-3 w-full border border-gray-300 bg-gray-50 rounded-none rounded-l-md sm:text-sm outline-none"
             placeholder="Email address"
             #email
           />
@@ -476,20 +480,20 @@
   <footer
     class="relative flex flex-col items-center justify-between gap-2 p-6 text-white bg-pencil-500"
   >
-    <div class="flex gap-4">
+    <div class="flex gap-1 sm:gap-4">
       <a
-        class="text-white transition duration-300 hover:text-gray-400 flex items-center gap-2"
+        class="text-white transition duration-300 hover:opacity-80 flex items-center gap-2"
         href="https://github.com/justin-chu/pencil-learning"
       >
         <img
-          class="h-5 w-5"
+          class="h-5 w-5 hidden sm:block"
           src="https://rajlab.org/icons/github_white.png"
         />GitHub</a
       >•<a
-        class="text-white transition duration-300 hover:text-gray-400 flex items-center gap-2"
+        class="text-white transition duration-300 hover:opacity-80 flex items-center gap-2"
         href="https://www.justinchu.tech/"
         ><svg
-          class="h-5 w-5"
+          class="h-5 w-5 hidden sm:block"
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 20 20"
           fill="currentColor"
@@ -502,10 +506,10 @@
         </svg>
         Portfolio</a
       >•<a
-        class="text-white transition duration-300 hover:text-gray-400 flex items-center gap-2"
+        class="text-white transition duration-300 hover:opacity-80 flex items-center gap-2"
         href="https://www.linkedin.com/in/justinchu252/"
         ><img
-          class="h-4 w-4 mb-0.5 mr-0.5"
+          class="h-4 w-4 mb-0.5 mr-0.5 hidden sm:block"
           src="https://www.docibgroup.com/assets/linkedin-icon-white.svg"
         />LinkedIn</a
       >
