Add shimmering effect

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div
-  class="min-h-screen max-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8"
+  class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8"
 >
   <div class="max-w-md w-full space-y-8">
     <div>
@@ -68,7 +68,7 @@
         <button
           (click)="authService.googleLogin()"
           type="submit"
-          class="group relative w-full flex justify-center py-2 px-4 border border-gray-600 text-sm font-medium rounded-md bg-white transition duration-300 hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500"
+          class="group relative w-full flex justify-center py-2 px-4 border border-gray-400 text-sm font-medium rounded-md bg-white transition duration-300 hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500"
         >
           <img
             class="h-5 w-5 mr-2"
