--- a/src/app/components/canvas/canvas.component.html
+++ b/src/app/components/canvas/canvas.component.html
@@ -227,8 +227,8 @@
       <div
         class="relative mb-4 gap-4 grid grid-cols-1 grid-flow-row sm: sm:grid-flow-col items-center"
       >
-        <div class="flex gap-4">
-          <div>
+        <div class="flex">
+          <div class="mr-2">
             <p class="text-xs font-medium text-gray-700 mb-1">Change mode:</p>
             <div class="flex">
               <button
@@ -271,7 +271,7 @@
               </button>
             </div>
           </div>
-          <div class="flex justify-center">
+          <div class="flex ml-2">
             <div>
               <p class="text-xs font-medium text-gray-700 mb-1">
                 Change stroke color:
@@ -378,96 +378,114 @@
         </div>
       </div>
     </div>
-    <canvas id="canvas"></canvas>
-    <!---------------------------------------------- Modal ---------------------------------------------->
-    <div *ngIf="modal" class="fixed z-10 inset-0 overflow-y-auto">
-      <div
-        class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0"
-      >
-        <div class="fixed inset-0 transition-opacity" aria-hidden="true">
-          <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
-        </div>
-        <span
-          class="hidden sm:inline-block sm:align-middle sm:h-screen"
-          aria-hidden="true"
-          >&#8203;</span
-        >
+    <div>
+      <div class="animate-pulse flex">
         <div
-          class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
-          role="dialog"
-          aria-modal="true"
-          aria-labelledby="modal-headline"
+          *ngIf="shimmer"
+          [style.width.px]="
+            width - 120 > 1400 ? 1400 : width >= 1024 ? width - 120 : width - 30
+          "
+          [style.height.px]="600"
+          class="bg-gray-400"
+        ></div>
+      </div>
+      <canvas id="canvas"></canvas>
+
+      <!---------------------------------------------- Modal ---------------------------------------------->
+      <div *ngIf="modal" class="fixed z-10 inset-0 overflow-y-auto">
+        <div
+          class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0"
         >
-          <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
-            <div class="sm:flex sm:items-start">
-              <div class="mt-3 text-center sm:mt-0 sm:text-left w-full">
-                <h3
-                  class="text-lg leading-6 font-medium text-gray-900"
-                  id="modal-headline"
-                >
-                  Load a shared canvas:
-                </h3>
-                <div class="mt-2 w-full">
-                  <p
-                    *ngIf="
-                      sharedCanvases?.length == 0 || sharedCanvases == undefined
-                    "
-                    class="text-sm text-gray-500"
+          <div class="fixed inset-0 transition-opacity" aria-hidden="true">
+            <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
+          </div>
+          <span
+            class="hidden sm:inline-block sm:align-middle sm:h-screen"
+            aria-hidden="true"
+            >&#8203;</span
+          >
+          <div
+            class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
+            role="dialog"
+            aria-modal="true"
+            aria-labelledby="modal-headline"
+          >
+            <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+              <div class="sm:flex sm:items-start">
+                <div class="mt-3 text-center sm:mt-0 sm:text-left w-full">
+                  <h3
+                    class="text-lg leading-6 font-medium text-gray-900"
+                    id="modal-headline"
                   >
-                    You currently have no shared canvases.
-                  </p>
-                  <div
-                    class="max-h-64 overflow-y-auto"
-                    *ngIf="
-                      sharedCanvases?.length > 0 && sharedCanvases != undefined
-                    "
-                  >
-                    <div
-                      class="flex flex-col"
-                      *ngFor="let sharedCanvas of sharedCanvases; let i = index"
-                      [attr.data-index]="i"
+                    Load a shared canvas:
+                  </h3>
+                  <div class="mt-2 w-full">
+                    <p
+                      *ngIf="
+                        sharedCanvases?.length == 0 ||
+                        sharedCanvases == undefined
+                      "
+                      class="text-sm text-gray-500"
                     >
-                      <button
-                        (click)="setSharedIndex(i)"
-                        [ngClass]="
-                          sharedIndex != i
-                            ? 'bg-gray-200 hover:bg-gray-400 text-black'
-                            : 'bg-indigo-600 hover:bg-indigo-700 text-white'
+                      You currently have no shared canvases.
+                    </p>
+                    <div
+                      class="max-h-64 overflow-y-auto"
+                      *ngIf="
+                        sharedCanvases?.length > 0 &&
+                        sharedCanvases != undefined
+                      "
+                    >
+                      <div
+                        class="flex flex-col"
+                        *ngFor="
+                          let sharedCanvas of sharedCanvases;
+                          let i = index
                         "
-                        class="w-full py-2 px-4 mb-2 rounded-md text-left transition duration-300 focus:outline-none"
+                        [attr.data-index]="i"
                       >
-                        {{ sharedCanvas.user }}'s canvas
-                      </button>
+                        <button
+                          (click)="setSharedIndex(i)"
+                          [ngClass]="
+                            sharedIndex != i
+                              ? 'bg-gray-200 hover:bg-gray-400 text-black'
+                              : 'bg-indigo-600 hover:bg-indigo-700 text-white'
+                          "
+                          class="w-full py-2 px-4 mb-2 rounded-md text-left transition duration-300 focus:outline-none"
+                        >
+                          {{ sharedCanvas.user }}'s canvas
+                        </button>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div
-            class="bg-gray-50 px-4 py-3 mb-3 sm:px-6 sm:flex sm:flex-row-reverse"
-          >
-            <button
-              (click)="loadSharedCanvas()"
-              type="button"
-              [ngClass]="
-                sharedCanvases?.length == 0 ||
-                sharedCanvases == undefined ||
-                sharedIndex == -1
-                  ? 'border-gray-300 bg-white text-gray-300 hover:bg-gray-50 pointer-events-none'
-                  : 'border-transparent text-white bg-indigo-600 transition duration-300 hover:bg-indigo-700 focus:ring-indigo-500 '
-              "
-              class="w-full inline-flex justify-center rounded-md border shadow-sm px-4 py-2 text-base font-medium focus:outline-none focus:ring-2 focus:ring-offset-2 sm:ml-3 sm:w-auto sm:text-sm"
+            <div
+              class="bg-gray-50 px-4 py-3 mb-3 sm:px-6 sm:flex sm:flex-row-reverse"
             >
-              Load Canvas
-            </button>
-            <button
-              (click)="hideModal()"
-              type="button"
-              class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 text-base font-medium transition duration-300 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm"
-            >
-              Cancel
-            </button>
+              <button
+                (click)="loadSharedCanvas()"
+                type="button"
+                [ngClass]="
+                  sharedCanvases?.length == 0 ||
+                  sharedCanvases == undefined ||
+                  sharedIndex == -1
+                    ? 'border-gray-300 bg-white text-gray-300 hover:bg-gray-50 pointer-events-none'
+                    : 'border-transparent text-white bg-indigo-600 transition duration-300 hover:bg-indigo-700 focus:ring-indigo-500 '
+                "
+                class="w-full inline-flex justify-center rounded-md border shadow-sm px-4 py-2 text-base font-medium focus:outline-none focus:ring-2 focus:ring-offset-2 sm:ml-3 sm:w-auto sm:text-sm"
+              >
+                Load Canvas
+              </button>
+              <button
+                (click)="hideModal()"
+                type="button"
+                class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 text-base font-medium transition duration-300 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm"
+              >
+                Cancel
+              </button>
+            </div>
           </div>
         </div>
       </div>
