--- a/src/app/components/canvas/canvas.component.html
+++ b/src/app/components/canvas/canvas.component.html
@@ -98,6 +98,7 @@
       </div>
     </div>
 
+    <!---------------------------------------------- Mobile Dropdown Navbar ---------------------------------------------->
     <div *ngIf="menu" class="block sm:hidden bg-pencil-500">
       <div class="pb-6 px-5 space-y-6">
         <div class="grid gap-y-3 pl-4">
@@ -194,7 +195,7 @@
     </div>
   </div>
 
-  <!---------------------------------------------- Canvas ---------------------------------------------->
+  <!---------------------------------------------- Canvas and Options ---------------------------------------------->
   <div
     class="m-auto flex flex-col px-0 pt-4 pb-24 mt-2 sm:mt-0 lg:px-12 lg:pt-8 lg:pb-28"
   >
@@ -223,11 +224,14 @@
         />
       </svg>
     </h1>
+
+    <!---------------------------------------------- Buttons and Inputs ---------------------------------------------->
     <div class="flex relative flex-col xl:flex-row">
       <div
         class="relative mb-4 gap-4 grid grid-cols-1 grid-flow-row sm: sm:grid-flow-col items-center"
       >
         <div class="flex">
+          <!---------------------------------------------- Change Mode Button ---------------------------------------------->
           <div class="mr-2">
             <p class="text-xs font-medium text-gray-700 mb-1">Change mode:</p>
             <div class="flex">
@@ -271,6 +275,8 @@
               </button>
             </div>
           </div>
+
+          <!---------------------------------------------- Change Stroke Color Input ---------------------------------------------->
           <div class="flex ml-2">
             <div>
               <p class="text-xs font-medium text-gray-700 mb-1">
@@ -307,6 +313,8 @@
             </div>
           </div>
         </div>
+
+        <!---------------------------------------------- Upload an Image Button ---------------------------------------------->
         <div>
           <p class="text-xs font-medium text-gray-700 mb-1">Upload an image:</p>
           <button
@@ -335,6 +343,8 @@
             Upload image
           </button>
         </div>
+
+        <!---------------------------------------------- Load a Shared Canvas Button ---------------------------------------------->
         <div>
           <p class="text-xs font-medium text-gray-700 mb-1">
             Load a shared canvas:
@@ -358,10 +368,13 @@
           </button>
         </div>
       </div>
+
+      <!---------------------------------------------- Share Canvas Input ---------------------------------------------->
       <div class="mb-6 sm:mb-4 xl:absolute xl:right-0 xl:mb-0">
         <p class="text-xs font-medium text-gray-700 mb-1">Share canvas:</p>
         <div class="mt-1 flex rounded-md shadow-sm">
           <input
+            (keyup.enter)="shareButton.click()"
             type="email"
             name="email"
             id="email"
@@ -372,12 +385,15 @@
           <button
             (click)="shareCanvas(email.value)"
             class="w-20 h-10 flex justify-center items-center px-4 border border-transparent text-sm font-medium rounded-none rounded-r-md text-white bg-indigo-500 transition duration-300 hover:bg-indigo-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-600"
+            #shareButton
           >
             Share
           </button>
         </div>
       </div>
     </div>
+
+    <!---------------------------------------------- Shimmer Loading Effect ---------------------------------------------->
     <div>
       <div class="animate-pulse flex">
         <div
@@ -389,6 +405,8 @@
           class="bg-gray-400"
         ></div>
       </div>
+
+      <!---------------------------------------------- Canvas ---------------------------------------------->
       <canvas id="canvas"></canvas>
 
       <!---------------------------------------------- Modal ---------------------------------------------->
