Update change stroke color input

--- a/src/app/components/canvas/canvas.component.html
+++ b/src/app/components/canvas/canvas.component.html
@@ -303,7 +303,7 @@
                   </span>
                 </div>
                 <input
-                  class="w-32 h-10 pl-11 pr-4 pb-0.5 text-sm font-medium text-white rounded-md"
+                  class="w-32 h-10 pl-11 pr-4 pb-0.5 text-sm font-medium text-white rounded-md cursor-pointer focus:outline-none"
                   [value]="color"
                   readonly
                   [(colorPicker)]="color"
